# obsidian-recipe-scraper

./: .pre-commit-config.yaml  LICENSE.md  README.md  main.py  pyproject.toml
