[project]
name = "obsidian-recipe-scraper"
description = "Use recipe_scrapers to build Obsidian-ready recipes"
version = "1.0.0"
authors = [
    { name = "Alex Wolfe" }
]
dependencies = [
    "recipe_scrapers",
]
requires-python = ">=3.13"

[project.optional-dependencies]
dev = [
    "prek",
    "ruff"
]
